
Both ETA C and EMA C++
-------------------------
[ESDK-3249] - Support 32-bit builds with ESDK 
[ESDK-3260] - EMA log files exist in ESDK AMI
[ESDK-3266] - Add 32-bit DACS libraries into BinaryPack and open source ANSI
[ESDK-3272] - Qualify ESDK with GCC Version 7.4.0

---------------------------------------------
ESDK C++/C Release 1.3.0.G1 (April 16, 2019)
---------------------------------------------

EMA/ETA C/C++ 3.3.0.G1 Issues Resolved
--------------------------------
[ESDK-3194] - Documentation improvements for EDP examples [GitHub #98]
[ESDK-3239] - CMake fix for build of cjson libraries

---------------------------------------------
ESDK C++/C Release 1.3.0.L1 (March 26, 2019)
---------------------------------------------

New Features Added
------------------
This ESDK release provides support for EDP Session management (token renewal)
and Service Discovery (discovering host/port information based on Cloud region
and type of connection ). Also available is added support for encrypted
transport using openSSL versions 1.0.X and 1.1.X on Windows and Linux for EMA
C++ and ETA C. Also in this release, all external dependencies such as libxml2, zlib, 
lz2 rely on associated external distribution locations and incorporated into build using cmake. 

EMA C++ 3.3.0.L1 Issues Resolved
--------------------------------
[ESDK-484] - EMA Consumer application that requests a streaming source directory does not receive source directory updates. [ Case 05257390 ]
[ESDK-619] - RMTES Partial updates are not processed correctly if OmmRmtes.toString() is called before OmmRmtes.apply() is called [Case Number: 05533464, GitHub #74]
[ESDK-1245] - Qualify Linux GCC 4.8.5
[ESDK-1480] - Default CMAKE option in GSG package to be cmake -DUSE_PREBUILT_ETA_EMA_LIBRARIES=ON
[ESDK-1565] - Turn on OpenSSL support for Windows Client connections
[ESDK-1611] - Client side encryption